--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css"
+        <link rel="stylesheet" href="styles.css" />
         <title>Discover Taniti</title>
     </head>
     <body>
@@ -21,6 +21,8 @@
             </nav>
         </header>
         <main></main>
-        <footer></footer>
+        <footer>
+            <p>Hello World</p>
+        </footer>
     </body>
 </html>
