Add image to bg of main page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <h1>Contact Us</h1>
             </nav>
         </header>
-        <main></main>
-        <footer>
-            <p>Hello World</p>
+        <main>
+            <!--<img class="main-img" src="assets/landing.jpg" alt="palm trees at sunset"-->
+        </main>
+        <footer></footer>
         </footer>
     </body>
 </html>
