Add overlay to img on landing page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <img
                 class="logo"
-                height="200px"
+                height="150px"
                 src="assets/logo.jpg"
                 alt="black and white palm tree"
             />
@@ -21,7 +21,8 @@
             </nav>
         </header>
         <main>
-            <!--<img class="main-img" src="assets/landing.jpg" alt="palm trees at sunset"-->
+            <div class="overlay"></div>
+            <div class="call-to-action"></div>
         </main>
         <footer></footer>
         </footer>
