--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="styles.css" />
         <title>Discover Taniti</title>
     </head>
@@ -20,11 +26,14 @@
                 <h1>Contact Us</h1>
             </nav>
         </header>
+
         <main>
+            <div class="call-to-action">
+                <h2>DISCOVER TANITI</h2>
+            </div>
             <div class="overlay"></div>
-            <div class="call-to-action"></div>
         </main>
+
         <footer></footer>
-        </footer>
     </body>
 </html>
