Add Dropdown Option in Nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
                 alt="black and white palm tree"
             />
             <nav>
-                <h1>Things to Do</h1>
-                <h1>FAQ</h1>
-                <h1>Contact Us</h1>
+                <div class="dropdown">
+                    <div class="dropH1">
+                        <h1>Things to Do</h1>
+                        <i class="fa fa-caret-down"></i>
+                    </div>
+                    <div class="dropdown-content">
+                        <a href="dining-entertainment.html"><h1>Dining & Entertainment</h1></a>
+                        <a href="lodging-transportation.html"><h1>Lodging & Transportation</h1></a>
+                    </div>
+                </div>
+
+                <a href="faq.html"<h1>FAQ</h1></a>
+                <a href="contact.html"><h1>Contact Us</h1></a>
             </nav>
         </header>
 
