--- a/index.html
+++ b/index.html
@@ -27,17 +27,21 @@
                         <i class="fa fa-caret-down"></i>
                     </div>
                     <div class="dropdown-content">
-                        <a href="dining-entertainment.html"><h1>Dining & Entertainment</h1></a>
-                        <a href="lodging-transportation.html"><h1>Lodging & Transportation</h1></a>
+                        <a href="dining-entertainment.html"
+                            ><h1>Dining & Entertainment</h1></a
+                        >
+                        <a href="lodging-transportation.html"
+                            ><h1>Lodging & Transportation</h1></a
+                        >
                     </div>
                 </div>
 
-                <a href="faq.html"<h1>FAQ</h1></a>
+                <a href="faq.html"><h1>FAQ</h1></a>
                 <a href="contact.html"><h1>Contact Us</h1></a>
             </nav>
         </header>
 
-        <main>
+        <main class="index">
             <div class="call-to-action">
                 <h2>DISCOVER TANITI</h2>
             </div>
