--- a/index.html
+++ b/index.html
@@ -10,21 +10,29 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="styles.css" />
+
+        <!--Font Awesome Kit-->
+        <script
+            src="https://kit.fontawesome.com/2ff98fd5c4.js"
+            crossorigin="anonymous"
+        ></script>
         <title>Discover Taniti</title>
     </head>
     <body>
         <header>
-            <img
-                class="logo"
-                height="150px"
-                src="assets/logo.jpg"
-                alt="black and white palm tree"
-            />
+            <a href="index.html">
+                <img
+                    class="logo"
+                    height="150px"
+                    src="assets/logo.jpg"
+                    alt="black and white palm tree"
+                />
+            </a>
             <nav>
                 <div class="dropdown">
                     <div class="dropH1">
                         <h1>Things to Do</h1>
-                        <i class="fa fa-caret-down"></i>
+                        <i class="fa-solid fa-caret-down"></i>
                     </div>
                     <div class="dropdown-content">
                         <a href="dining-entertainment.html"
