Add image and heading to first content page

--- a/dining-entertainment.html
+++ b/dining-entertainment.html
@@ -47,7 +47,15 @@
                 <a href="contact.html"><h1>Contact Us</h1></a>
             </nav>
         </header>
-        <main></main>
+        <h2 class="page-title">Dining & Entertainment</h2>
+        <main class="content">
+            <img
+                src="assets/restaurant.jpg"
+                alt="An outdoor restaurant with rustic decorations"
+                class="content-img"
+            />
+            <h3>Dining</h3>
+        </main>
         <footer></footer>
     </body>
 </html>
