Add content to lodging-transportation page

--- a/dining-entertainment.html
+++ b/dining-entertainment.html
@@ -62,6 +62,13 @@
                 supermarkets, two smaller grocery stores, and one convenience
                 store that is open 24 hours a day.
             </p>
+
+            <img
+                src="assets/volcano.jpg"
+                alt="An outdoor restaurant with rustic decorations"
+                class="content-img"
+            />
+
             <h3>Entertainment</h3>
             <p>
                 Most people visit Taniti to enjoy the beaches, explore the
