Make logo smaller

--- a/lodging-transportation.html
+++ b/lodging-transportation.html
@@ -47,7 +47,7 @@
                 <a href="contact.html"><h1>Contact Us</h1></a>
             </nav>
         </header>
-        <h2 class="page-title">Dining & Entertainment</h2>
+        <h2 class="page-title">Lodging & Transportation</h2>
         <main class="content">
             <img
                 src="assets/hotel.jpg"
