--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,32 @@
                 </div>
 
                 <a href="faq.html"><h1>FAQ</h1></a>
-                <a href="contact.html"><h1>Contact Us</h1></a>
+                <a href="contact.html"><h1>Contact</h1></a>
             </nav>
         </header>
-        <main></main>
-        <footer></footer>
+        <h2 class="page-title">Contact</h2>
+        <main class="content">
+            <img
+                src="assets/restaurant.jpg"
+                alt="An outdoor restaurant with rustic decorations"
+                class="content-img"
+            />
+            <h3>Send us and email or give us a call</h3>
+            <p>Email: discovertaniti@taniti.gov</p>
+            <p>Phone: +509 3739 4848</p>
+        </main>
+        <footer>
+            <div class="social">
+                <a href="#">
+                    <i class="fa-brands fa-facebook fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter fa-lg"></i>
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
