--- a/dining-entertainment.html
+++ b/dining-entertainment.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <a href="faq.html"><h1>FAQ</h1></a>
-                <a href="contact.html"><h1>Contact Us</h1></a>
+                <a href="contact.html"><h1>Contact</h1></a>
             </nav>
         </header>
         <h2 class="page-title">Dining & Entertainment</h2>
@@ -91,6 +91,18 @@
                 to Taniti’s active volcano.
             </p>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="social">
+                <a href="#">
+                    <i class="fa-brands fa-facebook fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter fa-lg"></i>
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
