--- a/faq.html
+++ b/faq.html
@@ -44,10 +44,68 @@
                 </div>
 
                 <a href="faq.html"><h1>FAQ</h1></a>
-                <a href="contact.html"><h1>Contact Us</h1></a>
+                <a href="contact.html"><h1>Contact</h1></a>
             </nav>
         </header>
-        <main></main>
-        <footer></footer>
+        <main class="content">
+            <h2 class="page-title">Frequently Asked Questions</h2>
+            <img
+                src="assets/sunset.jpg"
+                alt="a sunset over the ocean with palm trees"
+                class="content-img"
+            />
+            <ul>
+                <li>
+                    Power outlets are 120 volts (the same as in the United
+                    States).
+                </li>
+                <li>
+                    Alcohol is not allowed to be served or sold between the
+                    hours of midnight and 9:00 a.m.
+                </li>
+                <li>
+                    The drinking age on Taniti is 18 and the drinking age is not
+                    strictly enforced.
+                </li>
+                <li>
+                    Many younger Tanitians speak fluent English. Very little
+                    English is spoken in rural areas, especially by the older
+                    residents.
+                </li>
+                <li>
+                    There is one hospital and several clinics. The hospital has
+                    many multilingual employees.
+                </li>
+                <li>
+                    Violent crime is very rare on Taniti, but as tourism
+                    increases, there are more reports of pickpocketing and other
+                    petty crimes.
+                </li>
+                <li>
+                    Taniti enjoys a large number of national holidays, and many
+                    tourist attractions and restaurants will be closed on
+                    holidays, so visitors should plan accordingly.
+                </li>
+                <li>
+                    Taniti uses the U.S. dollar as its currency, but many
+                    businesses will also accept euros and yen. Several banks
+                    facilitate currency exchange, and many businesses accept
+                    major credit cards.
+                </li>
+            </ul>
+        </main>
+        <footer>
+            <div class="social">
+                <a href="#">
+                    <i class="fa-brands fa-facebook fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter fa-lg"></i>
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
