--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <a href="faq.html"><h1>FAQ</h1></a>
-                <a href="contact.html"><h1>Contact Us</h1></a>
+                <a href="contact.html"><h1>Contact</h1></a>
             </nav>
         </header>
 
@@ -56,6 +56,18 @@
             <div class="overlay"></div>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="social">
+                <a href="#">
+                    <i class="fa-brands fa-facebook fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter fa-lg"></i>
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
