Add image credit to footer

--- a/dining-entertainment.html
+++ b/dining-entertainment.html
@@ -103,6 +103,9 @@
                     <i class="fa-brands fa-x-twitter fa-lg"></i>
                 </a>
             </div>
+            <p class="credit">
+                Photos Courtesty of <a href="https://unsplash.com">Unsplash</a>
+            </p>
         </footer>
     </body>
 </html>
