--- a/lodging-transportation.html
+++ b/lodging-transportation.html
@@ -101,6 +101,9 @@
                     <i class="fa-brands fa-x-twitter fa-lg"></i>
                 </a>
             </div>
+            <p class="credit">
+                Photos Courtesty of <a href="https://unsplash.com">Unsplash</a>
+            </p>
         </footer>
     </body>
 </html>
