Add credit for logo image from Freepik

--- a/faq.html
+++ b/faq.html
@@ -107,7 +107,9 @@
                 </a>
             </div>
             <p class="credit">
-                Photos Courtesty of <a href="https://unsplash.com">Unsplash</a>
+                Photos Courtesty of
+                <a href="https://unsplash.com">Unsplash</a> and
+                <a href="https://www.freepik.com/">Freepik</a>
             </p>
         </footer>
     </body>
