--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,9 @@
                 </a>
             </div>
             <p class="credit">
-                Photos Courtesty of <a href="https://unsplash.com">Unsplash</a>
+                Photos Courtesty of
+                <a href="https://unsplash.com">Unsplash</a> and
+                <a href="https://www.freepik.com/">Freepik</a>
             </p>
         </footer>
     </body>
